--- a/src/components/NewsCalendar/NewsCalendar.scss
+++ b/src/components/NewsCalendar/NewsCalendar.scss
@@ -30,8 +30,8 @@
     box-shadow: none;
     color: #000;
     font-weight: 500;
-    &:hover{
-      color:#e41b1b;
+    &:hover {
+      color: #e41b1b;
     }
   }
 }
@@ -55,7 +55,6 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    gap: 3%;
     height: 80%;
     overflow-y: auto;
     button {
@@ -91,6 +90,7 @@
       font-size: 18px;
       font-weight: 400;
       line-height: 31px;
+      margin: 0;
     }
     .created {
       display: flex;
